when delivering OH requests, make sure the rights statement does not wrap inappropriately

--- a/app/frontend/stylesheets/local/oral_history_request_dashboard.scss
+++ b/app/frontend/stylesheets/local/oral_history_request_dashboard.scss
@@ -45,6 +45,7 @@
 
     .rights-statement {
       max-width: 18rem;
+      flex-shrink: 0;
     }
   }
 
